--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "re-cli",
-  "version": "1.0.0",
+  "name": "@opengame/re-cli",
+  "version": "0.0.1",
   "description": "",
   "type": "module",
   "main": "index.js",
   "bin": {
     "re": "bin/index.js",
     "re-cli": "bin/index.js"
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
