--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opengame/re-cli",
-  "version": "0.0.1",
+  "version": "0.0.1-beta",
   "description": "",
   "type": "module",
   "main": "index.js",
@@ -27,9 +27,7 @@
     "inquirer": "^9.2.22",
     "moment": "^2.30.1",
     "openapi2typescript": "^0.2.1",
-    "ora": "^8.0.1"
-  },
-  "devDependencies": {
+    "ora": "^8.0.1",
     "@umijs/openapi": "^1.12.1"
   }
 }
