--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,13 +24,13 @@ jobs:
       - name: Setup PNPM
         uses: pnpm/action-setup@v2.2.1
         with:
-            version: ^8.17.7
+            version: ^7.0
 
       # 设置 node。
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: 16
           cache: 'pnpm'
       # 安装依赖。
       - name: Install Dependencies
