--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
       - uses: actions/checkout@v4
       # 设置 pnpm。
       - name: Setup PNPM
-        uses: pnpm/action-setup@v4
+        uses: pnpm/action-setup@v2.2.1
         with:
             version: ^7.0
 
@@ -34,7 +34,7 @@ jobs:
           cache: 'pnpm'
       # 安装依赖。
       - name: Install Dependencies
-        run: pnpm install
+        run: pnpm install --no-frozen-lockfile
 
       # 使用changesets/action自动创建 PR 或者发布
       - name: Create Release Pull Request or Publish
